--- a/backend/public/date.html
+++ b/backend/public/date.html
@@ -19,7 +19,7 @@
 
     <p id="statusMsg" class="status-msg"></p>
     <p id="hurrayMsg" class="hurray-msg">🎉 Hurray! Confirmation sent to mail! 🎉</p>
-    <p id="hurrayMsg" class="hurray-msg">😅 Please check your spam folder! 😅</p>
+    <p id="spamMsg" class="spam-msg">😅 Please check your spam folder! 😅</p>
   </div>
 
   <script src="js/date.js"></script>
