--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -13,7 +13,15 @@
   <div class="main-container">
     <h1 class="heading">Happy Diwali, Pretty! 🪔✨</h1>
     <p class="subtext">
-      This year, God has gifted me the most wonderful person — and that’s you.<br>
+      This year, God has gifted me the most wonderful person — and that’s you.<br><br>
+      Vaise to Diwali aaj aayi hai,
+      par meri Diwali toh us din se shuru ho gayi thi,
+      jab aap mere best friend bane. ✨
+      Aap saath na ho to sab kuch khaali sa lagta hai,
+      par jab aap saath ho, toh har din Diwali lagti hai. 💫
+      Mere liye toh asli Diwali 15 June se hi aa gayi thi,
+      jab se humari baatein shuru hui thi. 🪔❤️
+      <br><br>
       May your Diwali be filled with light, laughter, and endless happiness. ❤️🎇
     </p>
     <button id="nextBtn" class="btn btn-next">Next ➡️</button>
