--- a/backend/public/main.html
+++ b/backend/public/main.html
@@ -11,7 +11,7 @@
 
   <div class="main-container">
     <h1 class="heading">Would you like to have coffee with me, Pretty? ☕💖</h1>
-    <p class="subtext">Just a cozy chat and some good vibes. I can’t wait to spend time with you! ✨</p>
+    <p class="subtext">All I need right now is a chill chat and good vibes with you. Can’t wait! ☕💫</p>
 
     <div class="buttons">
       <button class="btn btn-yes">Yes 💖</button>
