--- a/backend/public/main.html
+++ b/backend/public/main.html
@@ -21,5 +21,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/coffee-hearts.js"></script>
+  <script src="js/music.js"></script>
 </body>
 </html>
