--- a/backend/public/date.html
+++ b/backend/public/date.html
@@ -25,5 +25,6 @@
   <script src="js/date.js"></script>
   <script src="js/hearts.js"></script>
   <script src="js/confetti.js"></script>
+  <script src="js/music.js"></script>
 </body>
 </html>
